# aliyun-media-c-sdk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README-CN.md  README.md
sample/: CMakeLists.txt  client_sample.c  config.c  config.h  hls_sample.c  hls_stream_sample.c  mpegts_sample.c  sample.h.in  server_sample.c  ts_sample.c  ts_stream_sample.c
sample/data/: example.aac
sample/data/live/audio/: 1.aac  2.aac  3.aac  4.aac  5.aac  6.aac  7.aac  8.aac  9.aac
sample/data/live/video/: 1.h264  2.h264  3.h264  4.h264  5.h264  6.h264  7.h264  8.h264  9.h264
sample/data/slice/audio/: 1.aac  2.aac  3.aac
sample/data/slice/video/: 1.h264  2.h264  3.h264
src/: CMakeLists.txt  oss_media.c  oss_media_client.c  oss_media_client.h  oss_media_define.c  oss_media_define.h  oss_media_file.c  oss_media_file.h  oss_media_hls.c  oss_media_hls.h  oss_media_hls_stream.c  oss_media_hls_stream.h  oss_media_log.c  oss_media_mpegts.c  oss_media_mpegts.h  oss_media_server.c  oss_media_server.h  oss_media_ts.c  oss_media_ts.h  oss_media_ts_stream.c  oss_media_ts_stream.h
src/sts/: general.c  libsts.h  request.c  request.h  string_buffer.h  time.c  token.c  util.c  util.h
test/: CMakeLists.txt  config.c  config.h  test.h.in  test_all.c  test_client.c  test_hls.c  test_hls_stream.c  test_server.c  test_sts.c  test_ts.c  test_ts_stream.c
